# recursive-meta-learning-workbench

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HARDENING_CHECKLIST.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  cursor-daily-driver-prompt.md  cursor-learning-lab-instructions.md  cursor-master-prompt-continue.md  cursor-master-prompt-from-scratch.md  github-settings.md  learning-evidence.md  learning-lab-dvwa.md  learning-proof-run.md  release-announcement-v0.1.0.md  release-notes-v0.1.0.md  roadmap.md  security_model.md  usage.md
docs/wiki/: Architecture.md  Contributing.md  Getting-Started.md  Home.md  Security-and-Scope.md
scripts/: pre-push-check.sh  push-wiki.sh  run-dvwa-lab.sh
src/rmlw/: __init__.py  config.py  logging_utils.py  readiness.py  url_utils.py
src/rmlw/cli/: __init__.py  main.py
src/rmlw/learning/: __init__.py  archive.py  env_model.py  evolution.py  meta_controller.py  rl.py  stubs.py
src/rmlw/workbench/: __init__.py  core.py  discovery.py  payloads.py  tests_cmdi.py  tests_lfi.py  tests_sqli.py  tests_ssrf.py  tests_xss.py
tests/: test_cli_main.py  test_finding_shape.py  test_learning_archive.py  test_learning_env_model.py  test_learning_evolution.py  test_learning_meta_controller.py  test_learning_rl.py  test_payloads.py  test_readiness.py  test_url_utils.py  test_workbench_core.py
